fix: delete horizontal scroll in app

--- a/src/main.css
+++ b/src/main.css
@@ -222,6 +222,7 @@
 
 body {
   background-color: var(--body);
+  overflow-x: hidden;
 }
 
 /* Scroll bar */
